--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import nltk\n",
     "import spacy\n",
     "from pathlib import Path\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -150,13 +150,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/jimena/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}\n"
+     ]
+    }
+   ],
    "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "from string import punctuation\n",
+    "nltk.download('punkt')\n",
+    "\n",
     "def nltk_ttr(text):\n",
     "    \"\"\"Calculates the type-token ratio of a text. Text is tokenized using nltk.word_tokenize.\"\"\"\n",
-    "    pass"
+    "    ttr_dict = {}\n",
+    "\n",
+    "    for _, row in novels.iterrows():\n",
+    "        text = row['text']\n",
+    "        title = row['title']\n",
+    "\n",
+    "        tokens = word_tokenize(text)\n",
+    "\n",
+    "        tokens = [token.lower() for token in tokens if token not in punctuation]\n",
+    "\n",
+    "        types = set(tokens)\n",
+    "        ttr = len(types) / len(tokens)\n",
+    "\n",
+    "        ttr_dict[title] = ttr\n",
+    "\n",
+    "    return ttr_dict\n",
+    "\n",
+    "novels = read_novels()\n",
+    "ttr_by_novel = nltk_ttr(novels)\n",
+    "print(ttr_by_novel)"
    ]
   },
   {
