Fixed read_novels and TTR df name and libraries

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -4,7 +4,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/jimena/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Re-assessment template 2025\n",
     "\n",
@@ -12,13 +31,18 @@
     "\n",
     "import nltk\n",
     "import spacy\n",
+    "import pandas as pd\n",
+    "\n",
     "from pathlib import Path\n",
-    "import pandas as pd\n"
+    "from nltk.tokenize import word_tokenize\n",
+    "from string import punctuation\n",
+    "\n",
+    "nltk.download('punkt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +156,8 @@
     "\n",
     "    return df\n",
     "\n",
-    "novels = read_novels()\n",
-    "print(novels)"
+    "df = read_novels()\n",
+    "print(df)"
    ]
   },
   {
@@ -150,17 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /Users/jimena/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -171,15 +187,11 @@
     }
    ],
    "source": [
-    "from nltk.tokenize import word_tokenize\n",
-    "from string import punctuation\n",
-    "nltk.download('punkt')\n",
-    "\n",
     "def nltk_ttr(text):\n",
     "    \"\"\"Calculates the type-token ratio of a text. Text is tokenized using nltk.word_tokenize.\"\"\"\n",
     "    ttr_dict = {}\n",
     "\n",
-    "    for _, row in novels.iterrows():\n",
+    "    for _, row in df.iterrows():\n",
     "        text = row['text']\n",
     "        title = row['title']\n",
     "\n",
@@ -194,8 +206,8 @@
     "\n",
     "    return ttr_dict\n",
     "\n",
-    "novels = read_novels()\n",
-    "ttr_by_novel = nltk_ttr(novels)\n",
+    "df = read_novels()\n",
+    "ttr_by_novel = nltk_ttr(df)\n",
     "print(ttr_by_novel)\n",
     "#TTR sorted in descending order. Shows grade of lexical diversity within a text.\n",
     "\n",
