Implemented count_syl function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,6 +32,7 @@
     "import nltk\n",
     "import spacy\n",
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "from pathlib import Path\n",
     "from nltk.tokenize import word_tokenize\n",
@@ -87,7 +88,15 @@
     "    Returns:\n",
     "        int: The number of syllables in the word.\n",
     "    \"\"\"\n",
-    "    pass"
+    "    word = word.lower()\n",
+    "\n",
+    "    if word in d:\n",
+    "        return d[word]\n",
+    "    \n",
+    "    # Syllables by counting vowel clusters. 'Y' can sometimes act as a vowel in English\n",
+    "    syl_by_vowels = len(re.findall(r'[aeiouy]+', word))\n",
+    "\n",
+    "    return syl_by_vowels"
    ]
   },
   {
