Implemented dictionary of syllables function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,9 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to /Users/jimena/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package cmudict to /Users/jimena/nltk_data...\n",
+      "[nltk_data]   Package cmudict is already up-to-date!\n"
      ]
     },
     {
@@ -19,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,18 +39,48 @@
     "from pathlib import Path\n",
     "from nltk.tokenize import word_tokenize\n",
     "from string import punctuation\n",
+    "from nltk.corpus import cmudict\n",
     "\n",
-    "nltk.download('punkt')"
+    "\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('cmudict')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "nlp.max_length = 2000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmu_dict = cmudict.dict()\n",
+    "\n",
+    "def dict_of_syl():\n",
+    "    \"\"\"Returns a dictionary mapping words to their syllable counts based on the CMU dictionary\"\"\"\n",
+    "    cmu = cmudict.dict()\n",
+    "    syl_dict = {}\n",
+    "\n",
+    "    for word, pronunciations in cmu.items():\n",
+    "        # Vowel sounds in CMU have numbers at the end. If that is True count 1 syllable. \n",
+    "        syllable_counts = [sum(phoneme[-1].isdigit() for phoneme in pron)\n",
+    "        for pron in pronunciations]\n",
+    "        # A word may have multiple pronunciations. Get the simplest form.\n",
+    "        syl_dict[word.lower()] = min(syllable_counts)\n",
+    "\n",
+    "    return syl_dict\n",
+    "\n",
+    "d = dict_of_syl()\n",
+    "\n",
+    "# print(d['novels'])\n"
    ]
   },
   {
@@ -73,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
