Implemented fk_level function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
     "import re\n",
     "\n",
     "from pathlib import Path\n",
-    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "from string import punctuation\n",
     "from nltk.corpus import cmudict\n",
     "\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,27 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fk_level(text, d):\n",
-    "    \"\"\"Returns the Flesch-Kincaid Grade Level of a text (higher grade is more difficult).\n",
-    "    Requires a dictionary of syllables per word.\n",
-    "\n",
-    "    Args:\n",
-    "        text (str): The text to analyze.\n",
-    "        d (dict): A dictionary of syllables per word.\n",
-    "\n",
-    "    Returns:\n",
-    "        float: The Flesch-Kincaid Grade Level of the text. (higher grade is more difficult)\n",
-    "    \"\"\"\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +113,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.125526315789475\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fk_level(text, d):\n",
+    "    \"\"\"Returns the Flesch-Kincaid Grade Level of a text (higher grade is more difficult).\n",
+    "    Requires a dictionary of syllables per word.\n",
+    "\n",
+    "    Args:\n",
+    "        text (str): The text to analyze.\n",
+    "        d (dict): A dictionary of syllables per word.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The Flesch-Kincaid Grade Level of the text. (higher grade is more difficult)\n",
+    "    \"\"\"\n",
+    "    sentences = sent_tokenize(text)\n",
+    "    words = word_tokenize(text)\n",
+    "\n",
+    "    # Filter out punctuation tokens\n",
+    "    words = [word for word in words if re.search(r'\\w', word)]\n",
+    "\n",
+    "    num_sentences = len(sentences)\n",
+    "    num_words = len(words)\n",
+    "    # Uses the count_syl function\n",
+    "    num_syllables = sum(count_syl(word, d) for word in words)\n",
+    "\n",
+    "    # According to the Flesch-Kincaid Grade Level formula\n",
+    "    fk_grade = 0.39 * (num_words / num_sentences) + 11.8 * (num_syllables / num_words) - 15.59\n",
+    "    return fk_grade\n",
+    "\n",
+    "# text = \"This is an example of the Flesch-Kincaid Grade Level. It estimates the school grade needed to understand a text.\"\n",
+    "# fk = fk_level(text, d)\n",
+    "# print(fk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
