Implemented flesch_kincaid function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -263,6 +263,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flesch_kincaid(df, d):\n",
+    "    \"\"\"Returns a dictionary mapping novel titles to their Flesch-Kincaid grade level.\n",
+    "    Args:\n",
+    "        df: DataFrame including 'title' and 'text' columns.\n",
+    "        d: Dictionary of syllables per word.\n",
+    "    Returns:\n",
+    "        dict: {title: flesch_kincaid_grade}\n",
+    "    \"\"\"\n",
+    "    fk_grade = {}\n",
+    "\n",
+    "    for _, row in df.iterrows():\n",
+    "        title = row['title']\n",
+    "        text = row['text']\n",
+    "        fk_grade[title] = fk_level(text, d)\n",
+    "\n",
+    "    return fk_grade\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
