Implemented flesch_kincaid example

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -263,9 +263,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"\\nExample:\\ndf = read_novels()\\nd = dict_of_syl()\\nfk_grades = flesch_kincaid(df, d)\\n# Sorted by highest to lowest grade\\nfor title, grade in sorted(fk_grades.items(), key=lambda x: x[1], reverse=True):\\n    print(f\"{title}: {grade:.2f}\")\\n'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def flesch_kincaid(df, d):\n",
     "    \"\"\"Returns a dictionary mapping novel titles to their Flesch-Kincaid grade level.\n",
@@ -282,7 +293,17 @@
     "        text = row['text']\n",
     "        fk_grade[title] = fk_level(text, d)\n",
     "\n",
-    "    return fk_grade\n"
+    "    return fk_grade\n",
+    "\n",
+    "\"\"\"\"\n",
+    "Example:\n",
+    "df = read_novels()\n",
+    "d = dict_of_syl()\n",
+    "fk_grades = flesch_kincaid(df, d)\n",
+    "# Sorted by highest to lowest grade\n",
+    "for title, grade in sorted(fk_grades.items(), key=lambda x: x[1], reverse=True):\n",
+    "    print(f\"{title}: {grade:.2f}\")\n",
+    "\"\"\""
    ]
   },
   {
