Implemented parse function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,6 +35,8 @@
     "import spacy\n",
     "import pandas as pd\n",
     "import re\n",
+    "import pickle\n",
+    "\n",
     "\n",
     "from pathlib import Path\n",
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +274,7 @@
        "'\"\\nExample:\\ndf = read_novels()\\nd = dict_of_syl()\\nfk_grades = flesch_kincaid(df, d)\\n# Sorted by highest to lowest grade\\nfor title, grade in sorted(fk_grades.items(), key=lambda x: x[1], reverse=True):\\n    print(f\"{title}: {grade:.2f}\")\\n'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,14 +310,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse(df, store_path=Path.cwd() / \"pickles\", out_name=\"parsed.pickle\"):\n",
     "    \"\"\"Parses the text of a DataFrame using spaCy, stores the parsed docs as a column and writes \n",
     "    the resulting  DataFrame to a pickle file\"\"\"\n",
-    "    pass"
+    "\n",
+    "    nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "    max_length = df[\"text\"].apply(len).max()\n",
+    "\n",
+    "    # Add nlp.max_length in proportion to cheking the longest text in the dataset.  \n",
+    "    if max_length > nlp.max_length:\n",
+    "        nlp.max_length = max_length + 0\n",
+    "    \n",
+    "    df[\"parsed\"] = df[\"text\"].apply(nlp)\n",
+    "    \n",
+    "    pickle_path = store_path / out_name\n",
+    "    with open(pickle_path, \"wb\") as f:\n",
+    "        pickle.dump(df, f)\n",
+    "    \n",
+    "    return df"
    ]
   },
   {
