Implemented check max text length

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -310,6 +310,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximun text length: 1158935 characters\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the longest text length in our dataset\n",
+    "df[\"text_length\"] = df[\"text\"].apply(len)\n",
+    "max_length = df[\"text_length\"].max()\n",
+    "print(f\"Maximun text length: {max_length} characters\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
