Modified nlp max lenght

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,9 +342,9 @@
     "\n",
     "    max_length = df[\"text\"].apply(len).max()\n",
     "\n",
-    "    # Add nlp.max_length in proportion to cheking the longest text in the dataset.  \n",
+    "    # Add nlp.max_length after cheking the longest text in the dataset (1158935 char) nlp.max_length default 1000000.\n",
     "    if max_length > nlp.max_length:\n",
-    "        nlp.max_length = max_length + 0\n",
+    "        nlp.max_length = max_length + 500\n",
     "    \n",
     "    df[\"parsed\"] = df[\"text\"].apply(nlp)\n",
     "    \n",
