Added print for longest text as comment

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -332,7 +332,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Longest text number of tokens: 273574\n"
+     ]
+    }
+   ],
    "source": [
     "def parse(df, store_path=Path.cwd() / \"pickles\", out_name=\"parsed.pickle\"):\n",
     "    \"\"\"Parses the text of a DataFrame using spaCy, stores the parsed docs as a column and writes \n",
@@ -352,7 +360,14 @@
     "    with open(pickle_path, \"wb\") as f:\n",
     "        pickle.dump(df, f)\n",
     "    \n",
-    "    return df"
+    "    return df\n",
+    "\n",
+    "\n",
+    "\"\"\" Check printing for longest text\n",
+    "longest_text = df.loc[df[\"text_length\"].idxmax(), \"text\"]\n",
+    "parsed_lt = nlp(longest_text)\n",
+    "print(f\"Longest text number of tokens: {len(parsed_lt)}\")\n",
+    "\"\"\"\n"
    ]
   },
   {
