Saved and loaded pickle

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "'\"\\nExample:\\ndf = read_novels()\\nd = dict_of_syl()\\nfk_grades = flesch_kincaid(df, d)\\n# Sorted by highest to lowest grade\\nfor title, grade in sorted(fk_grades.items(), key=lambda x: x[1], reverse=True):\\n    print(f\"{title}: {grade:.2f}\")\\n'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -334,11 +334,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Longest text number of tokens: 273574\n"
-     ]
+     "data": {
+      "text/plain": [
+       "' Check printing for longest text\\nlongest_text = df.loc[df[\"text_length\"].idxmax(), \"text\"]\\nparsed_lt = nlp(longest_text)\\nprint(f\"Longest text number of tokens: {len(parsed_lt)}\")\\n'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -368,6 +371,17 @@
     "parsed_lt = nlp(longest_text)\n",
     "print(f\"Longest text number of tokens: {len(parsed_lt)}\")\n",
     "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store_path = Path.cwd() / \"pickles\"\n",
+    "df = parse(df)  \n",
+    "df = pd.read_pickle(store_path / \"parsed.pickle\")"
    ]
   },
   {
